--- a/Key_.css
+++ b/Key_.css
@@ -37,6 +37,13 @@
     height: 250px;
 }
 
+.cate{
+    display: block;
+    font-size: larger;
+    font-weight: bolder;
+    color: blue;
+}
+
 body{
     text-align: center;
 }
